After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725934 - Search button not work in selection mode
Search button not work in selection mode
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-08 08:42 UTC by Chunyang Xu
Modified: 2014-03-14 12:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make sure toolbar is added in selection mode (834 bytes, patch)
2014-03-08 08:48 UTC, Chunyang Xu
committed Details | Review

Description Chunyang Xu 2014-03-08 08:42:21 UTC
* enter selection mode (right click on a picture or click toolbar's 'Select Items' button
* click Search button
Comment 1 Chunyang Xu 2014-03-08 08:48:24 UTC
Created attachment 271297 [details] [review]
Make sure toolbar is added in selection mode
Comment 2 Debarshi Ray 2014-03-14 12:42:59 UTC
Review of attachment 271297 [details] [review]:

Good catch and perfect patch! Great job.