main-toolbar: Add searchbar in selection mode

https://bugzilla.gnome.org/show_bug.cgi?id=725934